# CLIP-JST

./: .gitignore  CLIP-JST.md  MultiModal JLT.md  REDO.md  UNIFIED_RESULTS.md  concatenation_proposals.md  narrative.md  pyproject.toml  reinforce.txt  requirements.txt  revised_narrative.md
MultiModal/: README.md
MultiModal/configs/: smoke_tests.yaml  smoke_tests_e8.yaml  stage11_mia_lira.yaml  (+381 more)
configs/: D1.yaml  D2.yaml  D3.yaml  D4.yaml  E1.yaml  E2.yaml  E3.yaml  E4.yaml  E4_cc3m.yaml  E5.yaml  E6.yaml  E7.yaml  _rerun_fix_D3.yaml  _rerun_fix_D4.yaml  _rerun_fix_E3.yaml  _rerun_fix_E5.yaml  _smoke_fix_D3.yaml  _smoke_fix_D4.yaml  _smoke_fix_E3.yaml  _smoke_fix_E5.yaml  controls.yaml
data/: __init__.py  cache.py  datasets.py
eval/: __init__.py  diagnostics.py  retrieval.py
experiments/: run_D1.py  run_D2.py  run_D3.py  run_D4.py  run_E1.py  run_E2.py  run_E3.py  run_E4.py  run_E5.py  run_E6.py  run_E7.py  run_controls.py
models/: __init__.py  baselines.py  jl.py  mahalanobis.py  pipeline.py
paper/: checklist.tex  main10.txt  make_figures.py  neurips_2026.aux  neurips_2026.bbl  neurips_2026.blg  neurips_2026.fdb_latexmk  neurips_2026.fls  neurips_2026.out  neurips_2026.tex  neurips_2026.txt  neurips_2026_current.txt  refs.bib
scripts/: prepare_cc3m.py  prepare_data.py  prepare_nuswide.py  run_fix_d4_gpu6.sh  run_fix_suite_gpu7.sh  run_queue_gpu7.sh  run_rigorous_suite_gpu2.sh  run_rigorous_suite_gpu3.sh
theory/: __init__.py  width_estimation.py
training/: __init__.py  infonce.py  spectral.py  trainer.py
utils/: __init__.py  bootstrap.py  common.py
(+391 files in other folders)
